Fixed issue on Firefox: mouse-over overlay on grid boxes are not sized correctly.

--- a/_assets/css/buddies.css
+++ b/_assets/css/buddies.css
@@ -438,7 +438,7 @@ ul.bulleted { list-style-type: disc; padding-left: 1.25em; }
 /* line 1, ../sass/partials/block-grid.scss */
 .block-grid { display: block; }
 /* line 5, ../sass/partials/block-grid.scss */
-.block-grid .block { display: inline-block; background-repeat: no-repeat; background-size: 100% auto; background-position: center center; border: 1px solid #e7edef; }
+.block-grid .block { position: relative; display: inline-block; background-repeat: no-repeat; background-size: 100% auto; background-position: center center; border: 1px solid #e7edef; }
 @media only screen and (max-width: 767px) { /* line 5, ../sass/partials/block-grid.scss */
   .block-grid .block { width: 100%; }
   /* line 14, ../sass/partials/block-grid.scss */
@@ -446,28 +446,28 @@ ul.bulleted { list-style-type: disc; padding-left: 1.25em; }
 @media only screen and (min-width: 768px) { /* line 5, ../sass/partials/block-grid.scss */
   .block-grid .block { width: 214px; height: 214px; margin-right: 10px; margin-bottom: 10px; } }
 /* line 35, ../sass/partials/block-grid.scss */
-.block-grid .block a { display: block; width: 100%; height: 100%; text-decoration: none; }
-/* line 44, ../sass/partials/block-grid.scss */
+.block-grid .block a { display: block; width: 100%; text-decoration: none; }
+/* line 43, ../sass/partials/block-grid.scss */
 .block-grid .block.followed { position: relative; }
-/* line 48, ../sass/partials/block-grid.scss */
+/* line 47, ../sass/partials/block-grid.scss */
 .block-grid .block.followed:before { content: ' '; position: absolute; bottom: -10px; right: -10px; width: 50px; height: 50px; border-radius: 50px; background-color: #ffaa00; border: 10px solid white; }
-/* line 64, ../sass/partials/block-grid.scss */
+/* line 63, ../sass/partials/block-grid.scss */
 .block-grid .block.followed:after { content: '\2713'; position: absolute; bottom: 0px; right: 7px; font-family: "Entypo"; color: white; font-size: 30px; }
-/* line 77, ../sass/partials/block-grid.scss */
+/* line 76, ../sass/partials/block-grid.scss */
 .block-grid .block.selected, .block-grid .block:hover { position: relative; }
-/* line 81, ../sass/partials/block-grid.scss */
+/* line 80, ../sass/partials/block-grid.scss */
 .block-grid .block.selected .info, .block-grid .block:hover .info { position: absolute; top: 0px; left: 0px; display: table !important; width: 100%; height: 100%; background-color: rgba(0, 152, 203, 0.85); }
-/* line 94, ../sass/partials/block-grid.scss */
+/* line 93, ../sass/partials/block-grid.scss */
 .block-grid .block.selected .info .wrapper, .block-grid .block:hover .info .wrapper { display: table-cell; text-align: center; vertical-align: middle; }
-/* line 101, ../sass/partials/block-grid.scss */
+/* line 100, ../sass/partials/block-grid.scss */
 .block-grid .block.selected .info .wrapper > span, .block-grid .block:hover .info .wrapper > span { position: relative; display: inline-block; width: 100%; color: white; }
-/* line 110, ../sass/partials/block-grid.scss */
+/* line 109, ../sass/partials/block-grid.scss */
 .block-grid .block.selected .info .wrapper > span.title, .block-grid .block:hover .info .wrapper > span.title { font-weight: 600; font-size: 18px; }
-/* line 116, ../sass/partials/block-grid.scss */
+/* line 115, ../sass/partials/block-grid.scss */
 .block-grid .block.selected .info .wrapper > span.subtitle, .block-grid .block:hover .info .wrapper > span.subtitle { margin-top: 5px; font-size: 14px; }
-/* line 121, ../sass/partials/block-grid.scss */
+/* line 120, ../sass/partials/block-grid.scss */
 .block-grid .block.selected .info .wrapper > span.subtitle .icon, .block-grid .block:hover .info .wrapper > span.subtitle .icon { font-size: 22px !important; }
-/* line 125, ../sass/partials/block-grid.scss */
+/* line 124, ../sass/partials/block-grid.scss */
 .block-grid .block.selected .info .wrapper > span.button, .block-grid .block:hover .info .wrapper > span.button { display: inline-block; padding: 0.75em 1.15em 0.75em 1.15em; border-radius: 5px; font-weight: 400; font-size: 16px; text-decoration: none; font-size: 18px; color: #0098cb; background-color: white; border: 1px solid white; position: absolute; bottom: 20px; left: 20%; width: 60%; padding: 0.35em 1em 0.5em 1em !important; }
 /* line 65, ../sass/partials/mixins.scss */
 .block-grid .block.selected .info .wrapper > span.button .icon, .block-grid .block:hover .info .wrapper > span.button .icon { font-size: 30px; }
@@ -475,7 +475,7 @@ ul.bulleted { list-style-type: disc; padding-left: 1.25em; }
 .block-grid .block.selected .info .wrapper > span.button:hover, .block-grid .block:hover .info .wrapper > span.button:hover { background-color: transparent; color: white; }
 /* line 86, ../sass/partials/mixins.scss */
 .block-grid .block.selected .info .wrapper > span.button.inactive, .block-grid .block:hover .info .wrapper > span.button.inactive { color: white !important; background-color: rgba(255, 255, 255, 0.2) !important; border: 1px solid rgba(255, 255, 255, 0.2) !important; }
-/* line 136, ../sass/partials/block-grid.scss */
+/* line 135, ../sass/partials/block-grid.scss */
 .block-grid .block.selected .info .wrapper > span.button .icon, .block-grid .block:hover .info .wrapper > span.button .icon { display: inline-block; padding-bottom: 0.15em; font-size: 22px !important; }
 
 /*/  /*/
