--- a/_assets/sass/partials/block-grid.scss
+++ b/_assets/sass/partials/block-grid.scss
@@ -4,7 +4,7 @@
 
 	.block
 	{
-
+		position: relative;
 		display: inline-block;
 
 		@include respond-to-size-xs
@@ -36,7 +36,6 @@
 		{
 			display: block;
 			width: 100%;
-			height: 100%;
 
 			text-decoration: none;
 		}
